--- a/src_backend/PetCareAppMVC/Features/Login/Index.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Login/Index.cshtml
@@ -74,7 +74,7 @@
                   <tr>
                       <td>
                           <span class="deleteicon">
-                          <input asp-for="userName" type="text" class="input__text" placeholder="Korisničko ime ili e-mail" required id="input__username" />
+                          <input asp-for="UserName" type="text" class="input__text" placeholder="Korisničko ime ili e-mail" required id="input__username" />
                           <span id="delete__username">x</span>
                           </span>
                       </td>
@@ -82,7 +82,7 @@
                   <tr>
                       <td>
                           <span class="deleteicon">
-                          <input asp-for="password" type="password" class="input__text" id="input__password" placeholder="Lozinka" required />
+                          <input asp-for="Password" type="password" class="input__text" id="input__password" placeholder="Lozinka" required />
                           <span id="delete__password">x</span>
                           </span>                    
                       </td>
