--- a/src_backend/PetCareAppMVC/Features/Signup/Index.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Signup/Index.cshtml
@@ -63,7 +63,7 @@
                         </div>
                         <br>
                         <span class="deleteicon">
-                        <input type="text" class="input__text" id="input__firstname" placeholder="Ime" required />
+                        <input asp-for="PersonFirstName" input type="text" class="input__text" id="input__firstname" placeholder="Ime" required />
                         <span id="delete__firstname">x</span>
                         </span>
                         <br>
@@ -72,7 +72,7 @@
                         </div>
                         <br>
                         <span class="deleteicon">
-                        <input type="text" class="input__text" id="input__lastname" placeholder="Prezime" required />
+                        <input asp-for="PersonLastName" input type="text" class="input__text" id="input__lastname" placeholder="Prezime" required />
                         <span id="delete__lastname">x</span>
                         </span>
                         <br>
@@ -81,7 +81,7 @@
                         </div>
                         <br>
                         <span class="deleteicon">
-                        <input type="text" class="input__text" id="input__email" placeholder="Adresa e-pošte" required/>
+                        <input asp-for="PersonEmail" input type="text" class="input__text" id="input__email" placeholder="Adresa e-pošte" required/>
                         <span id="delete__email">x</span>
                         </span>
                         <br>
@@ -90,7 +90,7 @@
                         </div>
                         <br>
                         <span class="deleteicon">
-                        <input type="text" class="input__text" id="input__cardnumber" placeholder="Broj kreditne kartice" required/>
+                        <input asp-for="Oib"input type="text" class="input__text" id="input__cardnumber" placeholder="Broj kreditne kartice" required/>
                         <span id="delete__cardnumber">x</span>
                         </span>
                         <br>
