--- a/src_backend/PetCareAppMVC/Features/Login/Index.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Login/Index.cshtml
@@ -19,7 +19,7 @@
                         <div class="split__right_80">
                             <a href="/home" style="padding: unset">
 
-                             <img style="width: 100%" class="header__logo__img" src="../resources/logo_horizontal.png" alt="">
+                             <img style="width: 100%" class="header__logo__img" src="~/resources/logo_horizontal.png" alt="">
  
                                 
                             </a>
