--- a/src_backend/PetCareAppMVC/Features/Home/Index.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@*@model PetCareAppMVC.Features.Home.HomeViewModel*@
+
+
+@{
     ViewData["Title"] = "Home Page";
 
 }
@@ -39,6 +42,24 @@
                 </div>
             </div>
         </div>
+@*
+          @{
+        if (String.IsNullOrEmpty(ViewData["error"]?.ToString()))
+
+        {
+
+
+        } else
+        {
+
+                <div class="center__err center" >
+      Netočna kombinacija korisnika i lozinke
+     </div>
+
+
+        }
+    }*@
+
         <div>
             <div class="landing"></div>
             <div class="text"></div>
