--- a/src_backend/PetCareAppMVC/Features/Listings/Index.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Listings/Index.cshtml
@@ -34,9 +34,12 @@
 
 
 
-     <input type="button" value="Moji oglasi" onclick="window.open('@Url.Action("MyListings", "Listings", new {sessionId = @ViewBag.SessionId,  UserName = @ViewBag.UserName})')"/>
+@*     <input type="button" value="Moji oglasi" onclick="window.open('@Url.Action("MyListings", "Listings", new {sessionId = @ViewBag.SessionId,  UserName = @ViewBag.UserName})')"/>
+*@     
+<a type="button" href="/Listings/MyListings?sessionId=@ViewBag.SessionId&UserName=@ViewBag.UserName">Moji oglasi</a>
+<a type="button" href="/Logout/Index?sessionId=@ViewBag.SessionId&UserName=@ViewBag.UserName">Odjava</a>
 
-    <input type="button" value="Odjava" onclick="window.open('@Url.Action("Index", "Logout", new {sessionId = @ViewBag.SessionId, UserName = @ViewBag.UserName} )')"/>
+    @*<input type="button" value="Odjava" onclick="window.open('@Url.Action("Index", "Logout", new {sessionId = @ViewBag.SessionId, UserName = @ViewBag.UserName} )')"/>*@
 
  
 
